--- a/newweb/nmrbox/src/custom-theme.scss
+++ b/newweb/nmrbox/src/custom-theme.scss
@@ -628,7 +628,7 @@ a#all-software {
   }
 
   .grid-content-wrapper {
-    width: 910px;
+    max-width: 910px;
     margin: 0px auto;
 
     h2, h3 {
